# omphalOS

./: .editorconfig  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  compose.yaml  docker-compose.yml  pylock.toml  pyproject.toml
.github/workflows/: ci.yaml  publishability.yaml  release.yaml
agents/go/: go.mod
config/: base.yaml
config/env/: prod.yaml
config/runs/: adversarial_demo.yaml  backfill_demo.yaml  example_run.yaml  hermetic_demo.yaml  replay_example.yaml  strict_demo.yaml
contracts/export_specs/: briefing_tables.yaml  packets.yaml
contracts/packs/: baseline.yaml  strict.yaml
contracts/quality_rules/: publishability_gates.yaml  quality_rules.yaml  security_posture_expectations.yaml  strict_publishability_gates.yaml  strict_quality_rules.yaml
contracts/schemas/: attestation.schema.json  config.schema.json  connector_contract.schema.json  dataset_contract.schema.json  determinism_report.schema.json  (+10 more)
docker/: Dockerfile
docs/: architecture.md  artifacts.md  cli.md  data_dictionary.md  glossary.md  governance.md  methodology.md  open_source_readiness.md  overview.md  packs.md  plugins.md  provenance.md  threat_model.md
examples/: README.md
notebooks/: 00_demo.ipynb  01_warehouse_exploration.ipynb  README.md
orchestration/: assets.py  jobs.py  schedules.py  sensors.py
spark/: README.md
tests/: conftest.py  helpers.py
ui/: index.html  package.json  tsconfig.json
ui/src/: App.tsx  (+1 more)
warehouse/: README.md  dbt_project.yml  selectors.yml
(+889 files in other folders)
